2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (report): Flush trailing whitespace.
	(get_trash): Correct spelling.

2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (powerfilter.html): Describe regex options.

2013-07-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (override [override], override [details]): Use
	bar for new_severity if it is > 0.0 instead of new_threat.
	(html-overrides-table): Use new_severity for sorting by "To" column.

2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* ChangeLog: Add close paren.

2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (CHECK_PARAM): Name variable more consistently.  Line
	up indenting.  Add space after function name.

2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_trash): Add space after functions.  Remove
	comments because it's pretty obvious what's happening.

2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_alert_omp): Check that comment is valid.

2013-07-09  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (html-tasks-table, task [details]): Rename "Threat"
	to "Severity".
	(report [report], last_report): Replace threat icon with severity bar.

2013-07-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (get_nvts): Show resource not found message when nvt
	is not found instead of empty ui box.

2013-07-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad.c (init_validator): Add "dynamic_severity" as alias for
	"boolean".

	* src/gsad_omp.c (save_my_settings_omp): Add saving of setting
	"Dynamic Severity".

	* src/html/omp.xsl (get_my_settings, edit_my_settings): Add the
	"Dynamic Severity" setting.

2013-07-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (result [result-headers]): Get severity from