@@ -924,6 +924,7 @@ init_validator ()
   openvas_validator_add (validator, "token", "^[a-z0-9\\-]+$");
   openvas_validator_add (validator, "schedule_id", "^[a-z0-9\\-]+$");
   openvas_validator_add (validator, "schedule_id_optional", "^(--|[a-z0-9\\-]+)$");
+  openvas_validator_add (validator, "severity", "^(|10.0|[0-9].[0-9]|10|[0-9])$");
   openvas_validator_add (validator, "severity_class", "^(classic|nist|bsi|pci\\-dss)$");
   openvas_validator_add (validator, "uuid",       "^[0-9abcdefABCDEF\\-]{1,40}$");
   openvas_validator_add (validator, "year",       "^[0-9]+$");
@@ -988,6 +989,7 @@ init_validator ()
                            "lsc_credential_id");
   openvas_validator_alias (validator, "method_data:to_address:", "email");
   openvas_validator_alias (validator, "method_data:from_address:", "email");
+  openvas_validator_alias (validator, "new_severity", "severity");
   openvas_validator_alias (validator, "new_threat",   "threat");
   openvas_validator_alias (validator, "next",         "page");
   openvas_validator_alias (validator, "next_id",      "info_id");
