@@ -16150,6 +16150,15 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
           </tr>
           <tr>
             <td valign="top" width="125">
+              <b>New Severity</b>
+            </td>
+            <td>
+              <input type="text" name="new_severity" value="" size="5"
+                     maxlength="4"/>
+            </td>
+          </tr>
+          <tr>
+            <td valign="top" width="125">
               Task
             </td>
             <td>
